--- a/DOSTravelingSecretary/Base.lproj/Main.storyboard
+++ b/DOSTravelingSecretary/Base.lproj/Main.storyboard
@@ -75,9 +75,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search" id="LHL-3d-C1I">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="YEg-da-yus" id="Mto-ND-D2q"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TripItemCell" textLabel="rzr-MV-Mt4" detailTextLabel="a9H-oR-Sb2" style="IBUITableViewCellStyleSubtitle" id="D2W-1X-Nsd">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="D2W-1X-Nsd" id="xc2-Wi-ofP">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -110,8 +118,20 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Recent Trips" id="0i2-Te-fIZ"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="FNv-sh-cUb" id="p3l-Ik-Ojy"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vRZ-Df-0yn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="FNv-sh-cUb">
+                    <connections>
+                        <outlet property="delegate" destination="YEg-da-yus" id="68G-Ph-lxe"/>
+                        <outlet property="searchBar" destination="LHL-3d-C1I" id="cht-ht-Fkb"/>
+                        <outlet property="searchContentsController" destination="YEg-da-yus" id="OAA-Vx-NoE"/>
+                        <outlet property="searchResultsDataSource" destination="YEg-da-yus" id="jZU-eE-8IG"/>
+                        <outlet property="searchResultsDelegate" destination="YEg-da-yus" id="ViK-wR-1yr"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1179" y="-224"/>
         </scene>
