--- a/DOSTravelingSecretary/Base.lproj/Main.storyboard
+++ b/DOSTravelingSecretary/Base.lproj/Main.storyboard
@@ -17,6 +17,7 @@
                     <connections>
                         <segue destination="914-M9-eM7" kind="relationship" relationship="viewControllers" id="Oz9-3x-7Ri"/>
                         <segue destination="A4H-MV-JVM" kind="relationship" relationship="viewControllers" id="JQi-bT-ITJ"/>
+                        <segue destination="0pd-5c-rVK" kind="relationship" relationship="viewControllers" id="xWv-GX-CER"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
@@ -219,8 +220,66 @@
             </objects>
             <point key="canvasLocation" x="663" y="524"/>
         </scene>
+        <!--Appointments Table View Controller-->
+        <scene sceneID="T3f-p3-oXN">
+            <objects>
+                <tableViewController id="RvW-qs-zqw" customClass="DOSAppointmentsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="2yv-rw-ND3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AppointmentCell" textLabel="fbw-nY-KWg" style="IBUITableViewCellStyleDefault" id="ReM-VJ-doO">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ReM-VJ-doO" id="wdr-av-GkD">
+                                    <rect key="frame" x="0.0" y="0.0" width="273" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fbw-nY-KWg">
+                                            <rect key="frame" x="15" y="0.0" width="258" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="RvW-qs-zqw" id="5Af-7H-dZk"/>
+                            <outlet property="delegate" destination="RvW-qs-zqw" id="FYd-3V-b8u"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="qxh-aE-7kq"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qSB-lf-VXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1190" y="1241"/>
+        </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="t70-Hl-CPh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0pd-5c-rVK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" image="AppointmentIcon" id="Qm5-AK-Ufm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SoK-sK-YBz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RvW-qs-zqw" kind="relationship" relationship="rootViewController" id="FOt-Gy-iX8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pyP-JX-mNk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="664" y="1241"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="AppointmentIcon" width="25" height="25"/>
         <image name="StatsIcon" width="27" height="27"/>
         <image name="WorldIcon" width="25" height="25"/>
     </resources>
